[gd_scene load_steps=20 format=3 uid="uid://bp883xug2k8uq"]

[ext_resource type="Script" path="res://gui/ingame.gd" id="1_hkfe0"]
[ext_resource type="Texture2D" uid="uid://uonwb5benn8k" path="res://interface/GUI/GUI_2x.png" id="1_jnujq"]
[ext_resource type="Texture2D" uid="uid://5ycbxtqa3yiq" path="res://interface/Buttons/buttons_2x.png" id="2_yutrt"]
[ext_resource type="Theme" uid="uid://csdx6erprher7" path="res://gui/ingame.tres" id="3_4bkar"]
[ext_resource type="Texture2D" uid="uid://lnsh3s6xcb86" path="res://assets/icons/Equipment/Bag.png" id="4_bta5p"]
[ext_resource type="Texture2D" uid="uid://baxqynjf51stk" path="res://assets/icons/Misc/Book.png" id="5_d5rve"]
[ext_resource type="Texture2D" uid="uid://bsnfdual5pl7b" path="res://assets/icons/Equipment/Iron Armor.png" id="5_njfcm"]
[ext_resource type="Texture2D" uid="uid://b2fhnwvtq4d2f" path="res://assets/icons/Misc/Gear.png" id="6_ghqrs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gmngf"]
bg_color = Color(0.0627451, 0.054902, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.8, 0.8, 0.8, 0)
shadow_color = Color(0.619608, 0.576471, 0, 0.6)
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_drhej"]
bg_color = Color(0.87451, 0.760784, 0, 1)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7qw0a"]
texture = ExtResource("1_jnujq")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
5:1/0 = 0
6:1/0 = 0
8:1/0 = 0
9:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
0:5/0 = 0
2:5/0 = 0
3:5/0 = 0
5:5/0 = 0
6:5/0 = 0
8:5/0 = 0
9:5/0 = 0
11:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
0:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
0:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
12:11/0 = 0
13:11/0 = 0
17:0/0 = 0
18:0/0 = 0
17:1/0 = 0
18:1/0 = 0
17:2/0 = 0
18:2/0 = 0
17:3/0 = 0
18:3/0 = 0
17:4/0 = 0
17:5/0 = 0
17:6/0 = 0
17:7/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bat7s"]
texture = ExtResource("2_yutrt")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0

[sub_resource type="TileSet" id="TileSet_he3ro"]
sources/2 = SubResource("TileSetAtlasSource_bat7s")
sources/0 = SubResource("TileSetAtlasSource_7qw0a")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ntmlh"]
texture = ExtResource("1_jnujq")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
5:1/0 = 0
6:1/0 = 0
8:1/0 = 0
9:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
0:5/0 = 0
2:5/0 = 0
3:5/0 = 0
5:5/0 = 0
6:5/0 = 0
8:5/0 = 0
9:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
0:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
0:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0

[sub_resource type="TileSet" id="TileSet_dsk6b"]
sources/0 = SubResource("TileSetAtlasSource_ntmlh")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dar8n"]
texture = ExtResource("1_jnujq")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
5:1/0 = 0
6:1/0 = 0
8:1/0 = 0
9:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
0:5/0 = 0
2:5/0 = 0
3:5/0 = 0
5:5/0 = 0
6:5/0 = 0
8:5/0 = 0
9:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
0:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
0:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0

[sub_resource type="TileSet" id="TileSet_gpvm3"]
sources/0 = SubResource("TileSetAtlasSource_dar8n")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_krlb7"]
texture = ExtResource("1_jnujq")
17:0/0 = 0
18:0/0 = 0
17:1/0 = 0
18:1/0 = 0
17:2/0 = 0
18:2/0 = 0
17:3/0 = 0
18:3/0 = 0
17:4/0 = 0
17:5/0 = 0
17:6/0 = 0
17:7/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
12:11/0 = 0
13:11/0 = 0
10:0/0 = 0
11:0/0 = 0
11:1/0 = 0
10:2/0 = 0
11:2/0 = 0
10:3/0 = 0
11:3/0 = 0
10:4/0 = 0
11:4/0 = 0
11:5/0 = 0
10:6/0 = 0
11:6/0 = 0
10:8/0 = 0
11:8/0 = 0
10:9/0 = 0
11:9/0 = 0
10:11/0 = 0
11:11/0 = 0
9:0/0 = 0
9:1/0 = 0
9:2/0 = 0
9:3/0 = 0
9:4/0 = 0
9:5/0 = 0
9:6/0 = 0
9:8/0 = 0
9:9/0 = 0
9:11/0 = 0
7:0/0 = 0
8:0/0 = 0
8:1/0 = 0
7:2/0 = 0
8:2/0 = 0
7:3/0 = 0
8:3/0 = 0
7:4/0 = 0
8:4/0 = 0
8:5/0 = 0
7:6/0 = 0
8:6/0 = 0
7:7/0 = 0
7:8/0 = 0
8:8/0 = 0
7:9/0 = 0
8:9/0 = 0
7:10/0 = 0
7:11/0 = 0
8:11/0 = 0
7:12/0 = 0
7:13/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
3:1/0 = 0
5:1/0 = 0
6:1/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
3:4/next_alternative_id = 9
3:4/0 = 0
3:4/8 = 8
3:4/8/flip_v = true
4:4/next_alternative_id = 5
4:4/0 = 0
4:4/4 = 4
4:4/4/flip_v = true
5:4/next_alternative_id = 4
5:4/0 = 0
5:4/3 = 3
5:4/3/flip_v = true
6:4/0 = 0
3:5/0 = 0
5:5/0 = 0
6:5/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
0:5/0 = 0
2:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
0:8/0 = 0
0:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0

[sub_resource type="TileSet" id="TileSet_voyaj"]
sources/0 = SubResource("TileSetAtlasSource_krlb7")

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_hkfe0")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_4bkar")

[node name="expBar" type="ProgressBar" parent="Control"]
layout_mode = 0
offset_top = 620.0
offset_right = 1152.0
offset_bottom = 646.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 1
theme_override_styles/background = SubResource("StyleBoxFlat_gmngf")
theme_override_styles/fill = SubResource("StyleBoxFlat_drhej")
value = 50.0

[node name="skills" type="Control" parent="Control"]
anchors_preset = 0
offset_left = 472.0
offset_top = 544.0
offset_right = 664.0
offset_bottom = 592.0
scale = Vector2(0.617829, 0.643209)
pivot_offset = Vector2(104, 32)

[node name="Label" type="ColorRect" parent="Control/skills"]
layout_mode = 2
offset_left = 8.0
offset_top = 8.0
offset_right = 201.0
offset_bottom = 57.0
color = Color(0.298039, 0.180392, 0, 1)

[node name="TileMap" type="TileMap" parent="Control/skills"]
position = Vector2(8, 8)
scale = Vector2(1.5, 1.5)
tile_set = SubResource("TileSet_he3ro")
format = 2
layer_0/tile_data = PackedInt32Array(-65536, 65536, 7, -65535, 131072, 7, -65534, 65536, 7, -65533, 131072, 7, -65532, 65536, 7, -65531, 131072, 7, -65530, 65536, 7, -65529, 131072, 7, 131071, 0, 8, -1, 0, 7, 65535, 0, 9, 0, 2, 0, 1, 65538, 0, 65537, 65538, 1, 65536, 2, 1, 131072, 65536, 10, 131073, 131072, 10, 131074, 65536, 10, 131075, 131072, 10, 131076, 65536, 10, 131077, 131072, 10, 131078, 65536, 10, 131079, 131072, 10, 196607, 262144, 10, 2, 2, 0, 65538, 2, 1, 3, 65538, 0, 65539, 65538, 1, 4, 2, 0, 65540, 2, 1, 5, 65538, 0, 65541, 65538, 1, 6, 2, 0, 65542, 2, 1, 7, 65538, 0, 65543, 65538, 1, 8, 196608, 8, 65544, 196608, 9, 131080, 458752, 10, -65528, 196608, 7)

[node name="TextureRect" type="TextureRect" parent="Control/skills"]
layout_mode = 0
offset_left = 17.0
offset_top = 16.0
offset_right = 48.0
offset_bottom = 46.0
texture = ExtResource("5_d5rve")
expand_mode = 1

[node name="eventCoin" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 936.0
offset_top = 472.0
offset_right = 1192.0
offset_bottom = 649.0
scale = Vector2(0.671287, 0.7151)

[node name="resources" type="HBoxContainer" parent="Control/eventCoin"]
layout_mode = 2
focus_mode = 1
theme = ExtResource("3_4bkar")

[node name="HBoxContainer" type="HBoxContainer" parent="Control/eventCoin/resources"]
layout_mode = 2

[node name="coins" type="Label" parent="Control/eventCoin/resources/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "0
"
horizontal_alignment = 1
vertical_alignment = 2

[node name="coinImage" type="Label" parent="Control/eventCoin/resources/HBoxContainer"]
layout_mode = 2
text = "
"

[node name="TileMap" type="TileMap" parent="Control/eventCoin/resources/HBoxContainer/coinImage"]
position = Vector2(-3, 1)
tile_set = SubResource("TileSet_dsk6b")
format = 2
layer_0/tile_data = PackedInt32Array(0, 589824, 9)

[node name="MarginContainer" type="MarginContainer" parent="Control/eventCoin"]
layout_mode = 2
theme_override_constants/margin_bottom = 5

[node name="eventBox" type="VBoxContainer" parent="Control/eventCoin"]
layout_mode = 2
size_flags_vertical = 3

[node name="TileMap" type="TileMap" parent="Control/eventCoin/eventBox"]
tile_set = SubResource("TileSet_gpvm3")
format = 2
layer_0/tile_data = PackedInt32Array(-65536, 65536, 4, -65535, 65536, 4, -65534, 65536, 4, -65533, 65536, 4, -65532, 65536, 4, -65531, 65536, 4, -65530, 65536, 4, -65529, 65536, 4, -65528, 65536, 4, -65527, 65536, 4, -65526, 65536, 4, -65525, 65536, 4, -65524, 65536, 4, -65523, 65536, 4, -65522, 65536, 4, -65521, 65536, 4, 589823, 0, 5, 524287, 0, 5, 458751, 0, 5, 393215, 0, 5, 327679, 0, 5, 262143, 0, 5, 196607, 0, 5, 131071, 0, 5, 65535, 0, 5, -1, 0, 4, 589824, 65536, 6, 589825, 65536, 6, 589826, 65536, 6, 589827, 65536, 6, 589828, 65536, 6, 589829, 65536, 6, 589830, 65536, 6, 589831, 65536, 6, 589832, 65536, 6, 589833, 65536, 6, 589834, 65536, 6, 589835, 65536, 6, 589836, 65536, 6, 589837, 65536, 6, 589838, 65536, 6, 589839, 65536, 6, 16, 131072, 5, 65552, 131072, 5, 131088, 131072, 5, 196624, 131072, 5, 262160, 131072, 5, 327696, 131072, 5, 393232, 131072, 5, 458768, 131072, 5, 524304, 131072, 5, -65520, 131072, 4, 589840, 131072, 6, 655359, 0, 6)

[node name="TextEdit" type="TextEdit" parent="Control/eventCoin/eventBox"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_4bkar")
theme_override_colors/background_color = Color(0.262745, 0.152941, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_placeholder_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 2
theme_override_constants/outline_size = 2
placeholder_text = "10:56: 2211 Experience gained"
editable = false
wrap_mode = 1
scroll_smooth = true

[node name="menu" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 15.0
offset_top = 480.0
offset_right = 139.0
offset_bottom = 608.0
alignment = 2

[node name="inventory" type="Button" parent="Control/menu"]
layout_mode = 2
text = "Inventory"
icon = ExtResource("4_bta5p")

[node name="equipment" type="Button" parent="Control/menu"]
layout_mode = 2
text = "Equipment"
icon = ExtResource("5_njfcm")

[node name="settings" type="Button" parent="Control/menu"]
layout_mode = 2
text = "Settings "
icon = ExtResource("6_ghqrs")

[node name="levelBg" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = 660.0
offset_top = 555.0
offset_right = 708.0
offset_bottom = 608.0
scale = Vector2(0.886255, 0.856921)
color = Color(0.0901961, 0.0156863, 0, 1)

[node name="levelContainer" type="VBoxContainer" parent="Control/levelBg"]
layout_mode = 0
offset_right = 48.0
offset_bottom = 53.0

[node name="TileMap" type="TileMap" parent="Control/levelBg/levelContainer"]
tile_set = SubResource("TileSet_voyaj")
format = 2
layer_0/tile_data = PackedInt32Array(-65536, 262144, 4, -65535, 262144, 4, -65534, 262144, 4, -65533, 327680, 4, -1, 196608, 4, 3, 327680, 5, 65539, 327680, 5, 131075, 327680, 5, 196607, 196608, 5, 131071, 196608, 5, 65535, 196608, 5, 196608, 262144, 262148, 196609, 262144, 262148, 196610, 262144, 262148, 196611, 327680, 196612, 262143, 196608, 524292)

[node name="lvlText" type="Label" parent="Control/levelBg/levelContainer"]
layout_mode = 2
text = "Lvl"
horizontal_alignment = 1
vertical_alignment = 2

[node name="level" type="Label" parent="Control/levelBg/levelContainer"]
layout_mode = 2
text = "52"
horizontal_alignment = 1
vertical_alignment = 2

[node name="healthBar" type="ProgressBar" parent="."]
modulate = Color(0.835294, 0, 0, 1)
offset_left = 192.0
offset_top = 555.0
offset_right = 448.0
offset_bottom = 576.0
tooltip_text = "Some experience"
theme = ExtResource("3_4bkar")
value = 20.0
show_percentage = false

[node name="healthText" type="Label" parent="healthBar"]
layout_mode = 0
offset_left = 104.0
offset_right = 152.0
offset_bottom = 21.0
theme = ExtResource("3_4bkar")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "50/100"
vertical_alignment = 2

[node name="healthRegen" type="Label" parent="healthBar"]
layout_mode = 0
offset_left = 225.0
offset_top = 4.0
offset_right = 275.0
offset_bottom = 25.0
scale = Vector2(0.543493, 0.587192)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "+0.5/s"
horizontal_alignment = 1
vertical_alignment = 2

[node name="hpMana" type="VBoxContainer" parent="."]
offset_left = 15.0
offset_top = 27.0
offset_right = 417.0
offset_bottom = 67.0

[connection signal="pressed" from="Control/menu/inventory" to="." method="_on_inventory_pressed"]
